feat:新增sdk模块,用于hmi和service之间通信

--- a/VehicleMonitorCar/hmi/src/main/AndroidManifest.xml
+++ b/VehicleMonitorCar/hmi/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/VehicleMonitor">
         <activity
-            android:name=".ui.HvacActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
