--- a/VehicleMonitorCar/hmi/src/main/AndroidManifest.xml
+++ b/VehicleMonitorCar/hmi/src/main/AndroidManifest.xml
@@ -13,9 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/VehicleMonitor">
+        android:name=".CarApp"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity"/>
     </application>
 
 </manifest>
