feat:移动端基类、登录注册UI、Launcher图标

--- a/VehicleMonitorPhone/settings.gradle
+++ b/VehicleMonitorPhone/settings.gradle
@@ -1,5 +1,8 @@
 pluginManagement {
     repositories {
+        maven {
+            url "https://maven.aliyun.com/repository/public/"
+        }
         google()
         mavenCentral()
         gradlePluginPortal()
@@ -8,9 +11,14 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {
+            url "https://maven.aliyun.com/repository/public/"
+        }
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "VehicleMonitorPhone"
 include ':app'
+include ':lib_common'
