feat:完成移动端静默登录,车辆显示

--- a/VehicleMonitorPhone/app/src/main/AndroidManifest.xml
+++ b/VehicleMonitorPhone/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".PhoneApplication"
         android:theme="@style/AppTheme_Iris_Blue"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".ui.LoginActivity"
@@ -24,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity"/>
     </application>
 
 </manifest>
