--- a/VehicleMonitorPhone/app/src/main/AndroidManifest.xml
+++ b/VehicleMonitorPhone/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MainActivity"/>
+        <activity android:name=".ui.CarDetailActivity"/>
     </application>
 
 </manifest>
