--- a/VehicleMonitorServer/pom.xml
+++ b/VehicleMonitorServer/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.18.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
